--- a/src/main/resources-production/config/thrift.properties
+++ b/src/main/resources-production/config/thrift.properties
@@ -1,10 +1,5 @@
-#host=localhost
-#port=20000
-#timeout=5000
-#keys=/home/hotplace/keys/
-#pwd=dongrim1234!
 host=106.248.235.180
 port=20000
 timeout=5000
-keys=d:\\keys\\
+keys=/home/hotplace/keys/
 pwd=dongrim1234!
