--- a/.gitignore
+++ b/.gitignore
@@ -99,7 +99,7 @@ buildNumber.properties
 .mvn/timing.properties
 
 src/main/resources-local/config/
-# src/main/resources-development/config/
+src/main/resources-development/config/
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
